XUI 14 : z-Index bugs with XUITable (alert component) (#3898)
* Fixing z-index issues in all browsers - testing branch for IE

* Delete this testing file.

--- a/src/sass/7-components/_contentblocks.scss
+++ b/src/sass/7-components/_contentblocks.scss
@@ -1137,7 +1137,7 @@ $xui-table-action-offset: $xui-s-5xlarge;
 $xui-table-z-pinned-shadow: 1;
 $xui-table-z-pinned-column: 2;
 $xui-table-z-pinned-appendages: 3;
-$xui-table-z-alert: 4;
+$xui-table-z-alert: 1;
 
 .#{$ns}-table {
 	border-radius: $xui-radius;
